[SG-1152] Fix border radius on mobile campaign spotlight.

--- a/web/themes/custom/sfgovpl/src/sass/paragraphs/_paragraph-campaign-spotlight.scss
+++ b/web/themes/custom/sfgovpl/src/sass/paragraphs/_paragraph-campaign-spotlight.scss
@@ -63,7 +63,7 @@
   }
 
   img {
-    border-radius: 8px;
+    border-radius: 8px 8px 0 0;
     width: 100%;
     display: block;
 
